tailwind added localy

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <title>SBER GUI HELPER</title>
   <link href="//db.onlinewebfonts.com/c/c68e21ad1a10803b1ef491fd0392b067?family=SB+Sans+Text" rel="stylesheet"
     type="text/css" />
-  <script src="https://cdn.tailwindcss.com"></script>
-
+    
+  <!-- <script src="https://cdn.tailwindcss.com"></script>  -->
+  
+  
 </head>
 
 <body>
